--- a/src/Pages/Homepage/Homepage.module.scss
+++ b/src/Pages/Homepage/Homepage.module.scss
@@ -3,7 +3,7 @@
   height: 100%;
 }
 .Boards {
-  background-color: #006494;
+  background-color: #f46036;
   background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-top: 20px;
