--- a/src/Components/AddColumn/AddColumn.module.scss
+++ b/src/Components/AddColumn/AddColumn.module.scss
@@ -18,13 +18,12 @@
   margin-left: 10px;
 }
 .heading {
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: 600;
+  color: #f46036;
 }
 form {
-  margin-top: 20px;
+  // margin-top: ;
   width: 100%;
   height: auto;
   display: flex;
@@ -32,15 +31,17 @@ form {
   align-items: flex-start;
   justify-content: space-between;
   label {
-    margin: 10px 0px;
+    margin: 1px 0px;
   }
+
   .formDiv {
     width: 100%;
     input {
-      width: 98%;
+      margin-top: 5px;
+      width: 90%;
       border-radius: 6px;
       border-bottom: 2px solid gray !important;
-      padding: 5px;
+      padding: 8px;
 
       border: 2px solid gray;
       background-color: transparent;
