--- a/src/Components/BoardColumn/BoardColumn.module.scss
+++ b/src/Components/BoardColumn/BoardColumn.module.scss
@@ -1,7 +1,11 @@
+.uppreroutercontainer {
+  width: 100%;
+  height: 100%;
+}
 .outercontainer {
   background-color: #81ecec;
   width: 300px;
-  min-height: 100px;
+  min-height: 100px !important;
   display: flex;
   flex-direction: column;
   margin-left: 20px;
@@ -12,6 +16,7 @@
   justify-content: space-between;
   margin-top: 2px;
   margin-bottom: 10px;
+  align-items: center;
 }
 
 i:hover {
@@ -19,6 +24,6 @@ i:hover {
 }
 @media only screen and (max-width: 586px) {
   .outercontainer {
-    margin: 10px 5px;
+    margin: 10px auto;
   }
 }
