--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -1,7 +1,7 @@
 .navbar {
   width: 100%;
   height: 50px;
-  background-color: #006494;
+  background-color: #d9f0ff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,7 +24,7 @@
   }
   .activenavigation {
     background-color: rgba(255, 255, 255, 0.5);
-    border: 3px solid blue;
+    border: 2px solid #1b1464;
     border-radius: 5px;
     padding: 2px 4px;
   }
@@ -32,13 +32,13 @@
     text-decoration: none;
     color: black;
     &:hover {
-      color: whitesmoke;
+      color: #f46036;
     }
   }
 }
 @media only screen and (max-width: 786px) {
   ul li {
-    font-size: 2.2vw;
+    font-size: 2.2vw !important;
   }
   ul {
     display: flex;
@@ -56,15 +56,15 @@
     border: none !important;
   }
   .title h1 {
-    font-size: 3.7vw;
+    font-size: 26px !important;
   }
 }
-@media only screen and (max-width: 486px) {
-  .title h1 {
-    font-size: 5vw;
-  }
+@media only screen and (max-width: 586px) {
+  // .title h1 {
+  //   font-size: 5vw !important;
+  // }
 
   ul li {
-    font-size: 3.2vw;
+    font-size: 4vw !important;
   }
 }
