--- a/src/Pages/CreateBoard Page/CreateBoardPage.module.scss
+++ b/src/Pages/CreateBoard Page/CreateBoardPage.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
 
   .createboard {
-    background-color: #f46036;
+    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
     margin: 10px 0px;
     background-clip: text;
     -webkit-text-fill-color: transparent;
